--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src="/scripts/weather.js"></script>
-        <script src="/scripts/formatting.js"></script>
+        <script src="./scripts/weather.js"></script>
+        <script src="./scripts/formatting.js"></script>
 
     </head>
     <html>
